2013-01-13 Alex Koutsman <koutsman@cern.ch>
	   U python/configManager.py
	   U python/channel.py
	   U python/fitConfig.py
	   U python/sample.py
	   * Adding possibility to remap histoSys systematics. 
	   * In channel.py it is tested whether nBins and bin width is the same for the two channels in question
	
2013-12-16 Max Baak <mbaak@cern.ch>
	M       StatTools.cxx
	M       ConfigMgr.cxx
	M       LimitResult.cxx
	M       HypoTestTool.cxx
	M       StatTools.h
	M       LimitResult.h
	* Now also store expected +- Nsigma variation of discovery p-value
	* When running HistFitter.py -z myconfigfile.py

2013-12-13  Zach Marshall <zach.marshall@cern.ch>
	* python/prepareHisto.py: Removing very slow alias setting
	* scripts/HistFitter.py: Adding option to run code profiler

2013-12-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: first ExclusionCleanup() call could segfault, moved

2013-12-12 Alex Koutsman <koutsman@cern.ch>
	U    scripts/HistFitter.py
	* small fix for new --fitname option

2013-12-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: fix a bug where if in the user file the variable
	'args' was used to parse configMgr.userArg *and* the user would want to
	run a fit this would lead to an error: 
		AttributeError: 'Namespace' object has no attribute 'fitname'
	Unless in the case where userArgs were supposed to have this attribute.
	Fixed by renaming our args to HistFitterArgs. This is a reserved keyword
	now, in a sense.

2013-12-09 Max Baak <mbaak@cern.ch>
	M       scripts/YieldsTableTex.py
	* Add sentence in caption that errors are symmetric by construction.

2013-12-05 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Tagging HistFitter-00-00-36-01

2013-11-26 Geert-Jan Besjes <geert-jan.besjes@cern.ch>:
	* src/toy_utils.cxx, src/toy_utils.h: modify
	CollectAndWriteHypoTestResults to allow rejectFailed=false 

2013-11-24 Geert-Jan Besjes <geert-jan.besjes@cern.ch>