@@ -129,6 +129,8 @@ namespace Util
   RooAbsReal* CreateNLL( RooWorkspace* w, TString fitRegions, Bool_t lumiConst=false);
 
   void PlotYieldPLL(RooWorkspace* w, RooAbsReal* nll, RooAbsReal* bkgf, RooFitResult* r=0);  
+
+  TString scanStrForFloats(const TString& toscan, const TString& format);
 }
 
 # endif
